# itcne24-devops

./: Dockerfile  README.md  application.py  backend.tf  docker-compose-sonar.yml  prometheus.yml  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: ci-cd.yml  terraform.yml
infrastructure/: app-init.yml  cloud-init.yml  main.tf  monitor-init.yml  network.tf  sonar-init.yml
