[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-app"
version = "0.1.0"
description = "Flask e-commerce application"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]

[tool.setuptools]
py-modules = ["application", "wsgi"]
